# GPU-Precond

./: CMakeLists.txt  README.md  clustering.txt  rect  test.ipynb  visual.ipynb
.cache/clangd/index/: matCPU.cc.4A9FF315C56926F0.idx  matCPU.hh.9E8F29513F3F8789.idx  test.cc.483B90AE96AEC21F.idx
data/: A.txt  rect  test2.msh
include/: graphLaplacian.hh  matCPU.hh
src/: CMakeLists.txt  graphLaplacian.cc  test.cc
src/graph/: CMakeLists.txt  matCPU.cc  test.cc
src/matrixGen/: CMakeLists.txt  test.cc
src/metis-slepc/: CMakeLists.txt  matCPU.cc  test.cc
test/: CMakeLists.txt  test.cc
